--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     "query-string": "^6.2.0",
     "react": "16.6.0",
     "react-ace": "^6.2.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.6.0",
     "react-intl": "2.7.2",
     "react-json-view": "^1.19.1",
+    "react-perfect-scrollbar": "^1.4.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "^4.0.8",
