--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-perfect-scrollbar": "^1.4.2",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "react-router-redux": "^4.0.8",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
